--- a/helm/deployChart/templates/cert.yaml
+++ b/helm/deployChart/templates/cert.yaml
@@ -1,20 +1,14 @@
-#{{- $fullName := include "wordpress.fullname" . -}}
-#{{- if not (and (contains ".breeze.io" (index .Values.DOMAIN 0)) (eq (len .Values.DOMAIN) 1))}}
-#apiVersion: certmanager.k8s.io/v1alpha1
-#kind: Certificate
-#metadata:
-#  name: {{ $fullName }}-cert
-#  namespace: ingress-nginx
-#spec:
-#  secretName: "{{ $fullName }}-secret"
-#  dnsNames:
-#  {{- range .Values.DOMAIN }}
-#  {{- if not (contains ".breeze.io" .)}}
-#  - {{ . | quote }}
-#  {{- end }}
-#  {{- end }}
-#  issuerRef:
-#    name: letsencrypt-issuer
-#{{- end}}
-#
-#
+apiVersion: certmanager.k8s.io/v1alpha1
+kind: Certificate
+metadata:
+  name: {{ $fullName }}-cert
+  namespace: vashist-app
+spec:
+  secretName: "{{ $fullName }}-secret"
+  dnsNames:
+  - .Values.DOMAIN
+  issuerRef:
+    name: letsencrypt-issuer
+{{- end}}
+
+
