--- a/helm/deployChart/templates/ingress.yaml
+++ b/helm/deployChart/templates/ingress.yaml
@@ -1,26 +1,22 @@
-#{{- $fullName := include "wordpress.fullname" . -}}
-#apiVersion: extensions/v1beta1
-#kind: Ingress
-#metadata:
-#  name: {{ $fullName }}-ingress
-#  namespace: ingress-nginx
-#  annotations:
-#    kubernetes.io/ingress.class: nginx
-#    nginx.ingress.kubernetes.io/add-base-url: "true"
-#    nginx.ingress.kubernetes.io/rewrite-target: /
-#spec:
-#  tls:
-#  {{- range .Values.DOMAIN }}
-#  - hosts:
-#      - {{ . | quote }}
-#    secretName: {{ if contains ".breeze.io" .}}breeze-tls.io{{else}}{{ $fullName }}-secret{{ end }}
-#  {{- end }}
-#  rules:
-#  {{- range .Values.DOMAIN }}
-#  - host: {{ . | quote }}
-#    http:
-#      paths:
-#        - backend:
-#            serviceName: {{ $fullName }}
-#            servicePort: http
-#  {{- end }}
+{{- $fullName := include "wordpress.fullname" . -}}
+apiVersion: extensions/v1beta1
+kind: Ingress
+metadata:
+  name: {{ $fullName }}-ingress
+  namespace: vashist-app
+  annotations:
+    kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/add-base-url: "true"
+    nginx.ingress.kubernetes.io/rewrite-target: /
+spec:
+  tls:
+  - hosts:
+      - {{ . | quote }}
+    secretName: {{ $fullName }}-secret
+  rules:
+  - host: {{ . | quote }}
+    http:
+      paths:
+        - backend:
+            serviceName: {{ $fullName }}
+            servicePort: http
