--- a/k8s-manifests/cert-manager/issuer/manifest.yml
+++ b/k8s-manifests/cert-manager/issuer/manifest.yml
@@ -2,14 +2,15 @@ apiVersion: certmanager.k8s.io/v1alpha1
 kind: Issuer
 metadata:
   name: letsencrypt-issuer
-  namespace: ingress-nginx
+  namespace: vashist-app
 spec:
   acme:
     server: https://acme-v02.api.letsencrypt.org/directory
-    email: dhruv.m@serverguy.com
+    email: sachin.v@serverguy.com
     privateKeySecretRef:
       name: letsencrypt-staging
     solvers:
     - http01:
         ingress:
           class: nginx
+ 
