--- a/client/package.json
+++ b/client/package.json
@@ -3,20 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^3.9.2",
-    "@material-ui/icons": "^3.0.2",
+    "@material-ui/core": "4.4.2",
+    "@material-ui/icons": "4.4.1",
     "lodash": "^4.17.11",
     "react": "^16.8.1",
-    "react-dom": "^16.8.1",
+    "react-dom": "^16.9.0",
     "react-icons": "^3.3.0",
-    "react-redux": "^6.0.0",
-    "react-router-dom": "^4.3.1",
+    "react-redux": "^7.1.1",
+    "react-router-dom": "^5.0.1",
     "recompose": "^0.30.0",
-    "redux-starter-kit": "^0.4.3"
+    "redux-starter-kit": "^0.7.0"
   },
   "devDependencies": {
-    "gh-pages": "^2.0.1",
-    "react-scripts": "2.1.3"
+    "react-scripts": "^3.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
