--- a/client/package.json
+++ b/client/package.json
@@ -5,12 +5,16 @@
   "dependencies": {
     "@material-ui/core": "4.4.2",
     "@material-ui/icons": "4.4.1",
+    "i": "^0.3.6",
     "lodash": "^4.17.11",
+    "npm": "^6.11.3",
     "react": "^16.8.1",
     "react-dom": "^16.9.0",
     "react-icons": "^3.3.0",
     "react-redux": "^7.1.1",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.0.1",
+    "react-scroll-parallax": "^2.1.2",
     "recompose": "^0.30.0",
     "redux-starter-kit": "^0.7.0"
   },
